# learn-python-with-tests

./: .bookignore  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SUMMARY.md  anti-patterns.md  backtracking.md  binary-search.md  bit-manipulation.md  book.json  bst.md  builtins-cheatsheet.md  classes-and-dataclasses.md  complexity.md  comprehensions.md  concurrency.md  control-flow.md  decorators.md  design-lru-cache.md  dicts-and-sets.md  dijkstra.md  dp-1d.md  dp-grid.md  dp-intervals.md  dp-knapsack.md  exceptions.md  file-handling.md  gb-readme.md  graphs-traversal.md  greedy.md  heaps.md  hello-pytest.md  how-to-study.md  install-python.md  internet-and-http.md  intervals.md  iteration.md  (+31 more)
backtracking/: __init__.py  _template.py
binary_search/: __init__.py  _template.py
book/: SUMMARY.md  anti-patterns.md  backtracking.md  binary-search.md  bit-manipulation.md  book.json  bst.md  builtins-cheatsheet.md  classes-and-dataclasses.md  company-oas.md  complexity.md  comprehensions.md  concurrency.md  control-flow.md  decorators.md  design-lru-cache.md  dicts-and-sets.md  dijkstra.md  dp-1d.md  dp-grid.md  dp-intervals.md  dp-knapsack.md  exceptions.md  file-handling.md  gb-readme.md  graphs-traversal.md  greedy.md  heaps.md  hello-pytest.md  how-to-study.md  install-python.md  internet-and-http.md  intervals.md  iteration.md  iterators.md  linked-lists.md  lists-and-slicing.md  math.md  mocking.md  modules-and-packaging.md  (+21 more)
classes_and_dataclasses/: __init__.py  money.py  test_money.py
comprehensions/: __init__.py  test_comprehensions.py
concurrency/: __init__.py  concurrency.py  test_concurrency.py
control_flow/: __init__.py  control_flow.py  test_control_flow.py
decorators/: __init__.py  test_decorators.py
dicts_and_sets/: __init__.py  dicts_and_sets.py  test_dicts_and_sets.py
docker/: nginx.conf
dp_1d/: __init__.py
dp_grid/: _template.py
dp_knapsack/: __init__.py  _template.py
exceptions/: __init__.py  test_exceptions.py
file_handling/: __init__.py  test_file_handling.py
graphs_traversal/: __init__.py  _template.py
hello_pytest/: __init__.py
internet_http/: __init__.py  http_client.py  test_http_client.py
iteration/: __init__.py
iterators/: __init__.py  iterators.py  test_iterators.py
linked_lists/: __init__.py  _template.py  test_template.py
lists_and_slicing/: __init__.py
math_problems/: __init__.py  _template.py
mocking/: __init__.py  reminders.py  test_reminders.py
modules_packaging/: __init__.py  geometry.py  test_geometry.py
number_basics/: __init__.py
oop/: __init__.py  test_shapes.py
prefix_sum/: __init__.py  _template.py
property_based_testing/: __init__.py
pytest_deep_dive/: __init__.py  bank.py  test_bank.py
sliding_window/: __init__.py  _template.py
sorting_and_comparators/: __init__.py  sorting.py  test_sorting.py
stack_and_monotonic_stack/: __init__.py  _template.py
strings/: __init__.py  test_strings.py
trees_bfs/: __init__.py  (+2 more)
(+313 files in other folders)
